--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/dh-css.css">
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="http://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css">
+  <!-- CARROUSEL -->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
     <title>React App</title>
   </head>
@@ -35,5 +38,39 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src='//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/plugins/ScrollToPlugin.min.js'></script>
+    <script >$(window).on("load", function() {
+
+      var $landingWrapper = $(".landing-wrapper"),
+          $landingInnerContent = $(".landing-inner-content");
+
+      // set initial container to half of .landing-inner-content width
+      //TweenMax.set($landingWrapper, {scrollTo: {x: $landingInnerContent.width()/4}, ease: Power2.easeOut});
+
+      // scroll left and right
+      $landingInnerContent.on("mousemove touchmove", function(e) {
+        if (e.clientX > $landingWrapper.width() / 2) {
+          TweenMax.to($landingWrapper, 2, {
+            scrollTo: {
+              x: "+=175"
+            },
+            ease: Power2.easeOut
+          });
+        } else {
+          TweenMax.to($landingWrapper, 2, {
+            scrollTo: {
+              x: "-=175"
+            },
+            ease: Power2.easeOut
+          });
+        }
+      });
+
+    });
+
+    </script>
   </body>
 </html>
