--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="http://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css">
   <!-- CARROUSEL -->
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>React App</title>
   </head>
   <body>
